<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Konbini Map</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_google_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="entry_find">Find</string>
    <string name="entry_title">Find Store</string>
    <string name="title_activity_place_info">PlaceInfoActivity</string>
    <string name="tab_text_1">Tổng quan</string>
    <string name="tab_text_2">Dữ liệu Google</string>
    <string name="tab_text_3">Đánh giá</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab1">Lịch sử tìm kiếm</string>
    <string name="tab2">Phản hồi của bạn</string>
    <string name="tab3">Liên hệ(chua co)</string>
    <string name="tab4">Ngôn ngữ(Language setting)</string>
    <string name="tab5">Thông tin tác giả</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
