<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="team25.conveniencestore.PlaceInfoActivity"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tab1"
            android:orderInCategory="100"
            android:title="@string/tab1"
            app:showAsAction="never"
            android:icon="@drawable/ic_history"
            />
        <item
            android:id="@+id/tab2"
            android:orderInCategory="100"
            android:title="@string/tab2"
            app:showAsAction="never"
            android:icon="@drawable/ic_feedback_35px"/>

        <item
            android:id="@+id/tab3"
            android:orderInCategory="100"
            android:title="@string/tab3"
            app:showAsAction="never"
            android:icon="@drawable/ic_contacts"/>

        <item
            android:id="@+id/tab4"
            android:orderInCategory="100"
            android:title="@string/tab4"
            app:showAsAction="never"
            android:icon="@drawable/ic_account"
            />

        <item
            android:id="@+id/tab5"
            android:orderInCategory="100"
            android:title="@string/tab5"
            app:showAsAction="never"
            android:icon="@drawable/ic_account"/>
    </group>
</menu>
